@@ -151,7 +151,7 @@ THIS IS AN AUTOMATICALLY-GENERATED FILE.  DO NOT EDIT.
     }
 
     #
-    # We have to tell Cons to QuickScan the top-level SGML files which
+    # We have to tell SCons to scan the top-level SGML files which
     # get included by the document SGML files in the subdirectories.
     #
     included_sgml = [
@@ -204,7 +204,8 @@ THIS IS AN AUTOMATICALLY-GENERATED FILE.  DO NOT EDIT.
                     jpg = os.path.join(htmldir, '%s.jpg' % g)
                     env.Command(jpg, fig,
                                 "%s -L jpeg -q 100 $SOURCES $TARGET" % fig2dev)
-                    env.Depends(ps, jpg)
+                    env.Depends(html, jpg)
+                    Local(jpg)
 
         if docs[doc].get('ps') and jadetex:
             env.Command(ps, main, [
@@ -225,6 +226,7 @@ THIS IS AN AUTOMATICALLY-GENERATED FILE.  DO NOT EDIT.
                     eps = os.path.join('PS', '%s.eps' % g)
                     env.Command(eps, fig, "%s -L eps $SOURCES $TARGET" % fig2dev)
                     env.Depends(ps, eps)
+                    Local(eps)
 
         if docs[doc].get('pdf') and pdfjadetex:
             env.Command(pdf, main, [
