@@ -773,6 +773,7 @@ gnulink
 latex
 lex
 masm
+mslib
 mslink
 msvc
 nasm
