@@ -44,8 +44,8 @@ SCons/Tool/ifl.py
 SCons/Tool/ilink.py
 SCons/Tool/latex.py
 SCons/Tool/lex.py
-SCons/Tool/lib.py
 SCons/Tool/masm.py
+SCons/Tool/mslib.py
 SCons/Tool/mslink.py
 SCons/Tool/msvc.py
 SCons/Tool/nasm.py
