@@ -121,16 +121,17 @@ test.fail_test(not os.path.exists(test.workpath('f2.out')))
 # to print what's going on when -n is used.  Following the
 # directions on the XXX lines below whenever that gets fixed.
 #
+install_f3_in = os.path.join('install', 'f3.in')
 # XXX Uncomment the next line and remove the one after it when we
 # fix the Install print during -n.
-#expect = test.wrap_stdout('Install file: "f3.in" as "install/f3.in"\n')
+#expect = test.wrap_stdout('Install file: "f3.in" as "%s"\n' % install_f3_in)
 expect = test.wrap_stdout('')
 
 test.run(arguments = '-n install', stdout = expect)
 test.fail_test(os.path.exists(test.workpath('install', 'f3.in')))
 
 # XXX Remove the next line when we fix the Install print during -n.
-expect = test.wrap_stdout('Install file: "f3.in" as "install/f3.in"\n')
+expect = test.wrap_stdout('Install file: "f3.in" as "%s"\n' % install_f3_in)
 
 test.run(arguments = 'install', stdout = expect)
 test.fail_test(not os.path.exists(test.workpath('install', 'f3.in')))
